fix overflow y links

--- a/styles.scss
+++ b/styles.scss
@@ -5,6 +5,7 @@
 @import "./scss/responsive";//scss con Responsive para iframes y Formularios
 
 body{
+    overflow-x: hidden;
     font-family: sans-serif;
     background-color: $colorBackground;
     .historia{
@@ -37,6 +38,15 @@ body{
         display: flex;
         justify-content: space-around;
         margin-bottom: 20px;
+    }
+    .botonCards{
+        background-color: $colorPrimario;
+        &:hover{
+            color: $colorPrimario;
+            background-color: $colorHover;
+            transition: scale, 0.6s;
+            transform: scale(1.3,1.3);
+        }
     }
     iframe{//instagram
         margin-bottom: 20px;
